# nemotronforge

./: $PROFILE  .gitignore  DEVELOPMENT.md  GUIDE.md  HARDWARE.md  README.md  dev.bat  dev.ps1  index.html  model-config.json  package-lock.json  package.json  vite.config.ts
req/: requirements.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: BuilderPanel.tsx  OllamaScannerPanel.tsx
src/hooks/: useModel.ts  useQwen.ts
src/lib/: api.ts  jsonCleaner.ts
src/types/: index.ts
