[package]
name = "nemotron"
version = "0.1.0"
description = "AI-Powered Software Builder"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
dirs = "5"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
git2 = "0.18"
sysinfo = "0.32"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
